Fix: Send breakMinutes from template to API - overnight shifts now have 0 break

--- a/src/Nobetci.Web/Views/App/Index.cshtml
+++ b/src/Nobetci.Web/Views/App/Index.cshtml
@@ -3656,6 +3656,7 @@
             startTime: state.selectedTemplate.start,
             endTime: state.selectedTemplate.end,
             spansNextDay: state.selectedTemplate.spans,
+            breakMinutes: state.selectedTemplate.breakMinutes || 0,
             isDayOff: state.selectedTemplate.isDayOff || false,
             overnightHoursMode: overnightHoursMode
         };
