--- a/src/Nobetci.Web/Views/_ViewImports.cshtml
+++ b/src/Nobetci.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Nobetci.Web
 @using Nobetci.Web.Models
+@using Nobetci.Web.Resources
+@using Microsoft.Extensions.Localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
